# de_portfolio

./: README.md
airflow_report_generator/dags/Reporting/: universal_report_generator.py
example_airflow_data_pipeline/: pyproject.toml
example_airflow_data_pipeline/dags/: .airflowignore
example_airflow_data_pipeline/dags/Pipeline/: asset_based_pipeline.py
example_airflow_data_pipeline/requirements/: requirements.txt
example_airflow_report_generator/: pyproject.toml
example_airflow_report_generator/requirements/: requirements.txt
example_common_library/: LICENSE  README.md  build_and_publish.sh  pyproject.toml  setup.py
example_common_library/.github/workflows/: cd_actions.yml
example_common_library/common_library/: __init__.py  common_aws.py  common_config.py  common_datasets.py  common_five9.py  common_pipeline.py  common_reports.py  common_sftp.py  common_sharepoint.py  common_smc.py  common_snowflake.py
example_common_library/common_library/Reporting/: formatters.py  submitters.py
example_containerized_airflow_server/: Dockerfile  README.md  aws_docker_setup.sh  docker-compose-dev.yaml  docker-compose-prod.yaml  requirements.txt
example_containerized_airflow_server/airflow_ecs_executor/: Dockerfile
example_streamlit_data_tools/: Dockerfile  docker-compose.yaml  pyproject.toml  rebuild_and_deploy.sh  requirements.txt  sample.csv
example_streamlit_data_tools/app/: navigation.py  streamlit_app.py  theme.css  utilities.py
example_streamlit_data_tools/app/pages/: main.py  mfr_ndcs.py  mfr_report_approvals.py  mfr_reports.py  obfuscated_lookup.py
(+5 files in other folders)
